See also the changelog of the main JavaScript library
(https://github.com/vorple/vorple/CHANGES).

The numbers after the items refer to GitHub issues. (vorple #xx) refers to issue
number xx in the main Vorple repository.

Release 3.2
===========

Modal Windows
-------------

- Tweaked the behavior when requested to pause the game to be more consistent
- Expanded the documentation with further explanation of the "without pausing" 
  option and the "show a modal window" shorthand, and removed the instruction
  to pause the game manually which is actually not necessary


Multimedia
----------

- Most browsers have adapted Chrome's policy of not allowing autoplaying audio,
  so the documentation has been updated to reflect the current status. Desktop
  Safari has gone overboard with the restrictions, which is also noted in the
  documentation.



Release 3.1 (2018-11-03)
========================

- Unit tests are rewritten to use Webdriver.io and Selenium so that the I7 story
  file only runs the I7 code and the JavaScript test cases check the results
- Added the Status Line extension


Vorple
------

- BREAKING CHANGE: Evaluated JavaScript code must now explicitly return a value
  from the expression, otherwise no return value is available in Inform.
  Previously the value of the last expression was automatically returned.
  See the Vorple extension documentation for details.
- BREAKING CHANGE: For performance reasons the interpreter now writes the type
  of the evaluated JavaScript expression to a file for Inform to pick up,
  instead of having the Inform extension deduce the type from the value. This
  means that the phrase to get the type is now a fixed phrase "type of the value
  returned by the JavaScript command" instead of the previous "type of (text)".
- Unicode characters evaluated as JavaScript are escaped properly when using the
  "escaped" transformation (vorple #22)
- Added the Vorple interface update rulebook as a mechanism for state-based user